--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.UpdatePassActivity"></activity>
+        <activity android:name=".ui.RecipeActivity"></activity>
+        <activity android:name=".ui.UpdatePassActivity" />
         <activity android:name=".ui.UpdateActivity" />
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.ProfileActivity" />
