--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0-alpha05"
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //dexter
+    implementation 'com.karumi:dexter:4.2.0'
 }
