--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //dexter
     implementation 'com.karumi:dexter:4.2.0'
+    //privacy
+    implementation 'com.github.khirr:Android-Privacy-Policy:1.0.1'
+    //admob
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 }
