--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
     </application>
 
     <!--    &lt;!&ndash; FileProvider settings, after this configuration you can use FileProvider in your activity. &ndash;&gt;-->
